--- a/Year-1---Assignment-1-CCA-Website-/mainPage/CSS/Home.css
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/CSS/Home.css
@@ -2,9 +2,37 @@ header {
     position: sticky;
     padding: 0;
     margin: 1% 1%;
+    padding-bottom: 4%;
     background-color: #e8e4c9;
     box-shadow: 0px 3px 5px gray, 5px 3px 5px gray, -5px 3px 5px gray;
     border-radius: 10px;
+    top: 2%;
+}
+
+footer {
+    margin-top: auto;
+    display: block;
+    padding: 20px;
+    height: 250px;
+    color: aliceblue;
+    background-color: rgb(31, 31, 31);
+}
+
+footer table {
+    font-size: 1vw;
+    border: 1px solid #ccc;
+}
+footer div {
+    text-align: left;
+    font-size: 3vw;
+    color: aliceblue;
+}
+
+.banner {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
 }
 
 .logo{
@@ -19,3 +47,4 @@ main {
     margin: 0;
     
 }
+
