--- a/Year-1---Assignment-1-CCA-Website-/mainPage/CSS/Home.css
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/CSS/Home.css
@@ -1,12 +1,30 @@
 header {
-    position: sticky;
-    padding: 0;
-    margin: 1% 1%;
-    padding-bottom: 4%;
+    position: fixed;
+    padding: 0 24% .5% 24%;
     background-color: #e8e4c9;
     box-shadow: 0px 3px 5px gray, 5px 3px 5px gray, -5px 3px 5px gray;
     border-radius: 10px;
-    top: 2%;
+    top: 1%;
+    left: 1%;
+    right: 1%;
+}
+
+header div {
+    display: block;
+    margin:auto;
+    text-align: center;
+}
+header div p {
+    font-weight: bold;
+    display: inline;
+    margin-left: 3.3vw;
+    font-size: 1.5vw;
+}
+
+.a:hover {
+    cursor: grab;
+    color: orangered;
+    transition: 0.3s;
 }
 
 footer {
@@ -20,7 +38,7 @@ footer {
 
 footer table {
     font-size: 1vw;
-    border: 1px solid #ccc;
+    border: 1px solid aliceblue;
 }
 footer div {
     text-align: left;
@@ -36,8 +54,8 @@ footer div {
 }
 
 .logo{
-    max-width: 20%;
-    max-height: 20%;
+    max-width: 40%;
+    max-height: 40%;
     display: block;
     margin: auto;
 }
