--- a/Year-1---Assignment-1-CCA-Website-/mainPage/CSS/Home.css
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/CSS/Home.css
@@ -22,7 +22,7 @@ header div p {
 }
 
 .a:hover {
-    cursor: grab;
+    cursor: pointer;
     color: orangered;
     transition: 0.3s;
 }
@@ -36,15 +36,18 @@ footer {
     background-color: rgb(31, 31, 31);
 }
 
-footer table {
-    font-size: 1vw;
-    border: 1px solid aliceblue;
+.fColumns {
+    column-count: 4;
 }
-footer div {
+
+
+footer h1 {
     text-align: left;
     font-size: 3vw;
     color: aliceblue;
 }
+
+
 
 .banner {
     width: 100%;
@@ -64,5 +67,9 @@ main {
     padding: 0;
     margin: 0;
     
+}
+
+.footerImg {
+    width: 4vw;
 }
 
