--- a/Year-1---Assignment-1-CCA-Website-/mainPage/CSS/Home.css
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/CSS/Home.css
@@ -17,7 +17,7 @@ header div {
 header div p {
     font-weight: bold;
     display: inline;
-    margin-left: 3.3vw;
+    margin-left: 3vw;
     font-size: 1vw;
 }
 
@@ -31,17 +31,22 @@ footer {
     margin-top: auto;
     display: block;
     padding: 20px;
-    height: 250px;
+    height: 25vw;
     color: aliceblue;
-    background-color: rgb(31, 31, 31);
+    background-color: rgb(40, 40, 255);
 }
 
 footer table {
-    column-width: 100%;
+
+    table-layout: fixed;
+    width: 100%;
     font-size: 1vw;
-    border: 1px solid aliceblue;
+    border-collapse: collapse;
 }
 
+table, tr, td {
+    border: 1px solid aliceblue;
+}
 
 footer h1 {
     text-align: left;
@@ -72,6 +77,7 @@ main {
 }
 
 .footerImg {
-    width: 4vw;
+    margin: 2px;
+    width: 2vw;
 }
 
