--- a/Year-1---Assignment-1-CCA-Website-/mainPage/CSS/Header.css
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/CSS/Header.css
@@ -1,28 +1,70 @@
 header {
     position: fixed;
-    padding: 0 24% .5% 24%;
+    padding: 0 2% .5% 2%;
     background-color: #e8e4c9;
     box-shadow: 0px 3px 5px gray, 5px 3px 5px gray, -5px 3px 5px gray;
     border-radius: 10px;
     top: 1%;
     left: 1%;
     right: 1%;
+    height: calc(50px + 2.5vw);
+    overflow: visible;
+    z-index: 1000; /* Ensure header is above other content */
 }
 
 header div {
-    display: block;
-    margin:auto;
+    position: relative;
     text-align: center;
+    height: 100%;       /* Add this */
 }
+
 header div p {
+    
+    background-color: yellow;
+    bottom: 0;          /* Add this */
+    left: 3vw;          /* Add this */
     font-weight: bold;
     display: inline;
-    margin-left: 3vw;
-    font-size: 1vw;
+    font-size: calc(10px + 0.6vw);
+    margin-left: 0;     /* Remove margin-left */
+    float: none;        /* Remove float */
+    top: auto;          /* Remove top */
 }
 
 .a:hover {
     cursor: pointer;
     color: orangered;
+    transition: 0.3s;
+}
+
+.logo {
+    float: left;
+    height: calc(40px + 2.5vw);
+    display: block;
+    max-height: 700px;
+    object-fit: cover;
+}
+
+.nav-menu p:hover {
+    color: orangered;
+}
+
+.nav-menu {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: calc(40px + 4vw); /* adjust so it doesn't overlap logo */
+    right: 0;
+    display: flex;
+    gap: 3vw;
+    align-items: flex-end;
+}
+
+.nav-menu .a {
+    font-weight: bold;
+    font-size: calc(10px + 0.6vw);
+    background-color: yellow;
+    margin: 0;
+    cursor: pointer;
     transition: 0.3s;
 }
