--- a/ContactUsPage/CSS/ContactUs.css
+++ b/ContactUsPage/CSS/ContactUs.css
@@ -52,6 +52,8 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.1rem;
   color: #333;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
