--- a/ContactUsPage/CSS/ContactUs.css
+++ b/ContactUsPage/CSS/ContactUs.css
@@ -34,18 +34,7 @@
 
 .schedule h2 {
   color: #dc3545;
-  position: relative;
   padding-bottom: 0.5rem;
-}
-
-.schedule h2::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 3rem;
-  height: 3px;
-  background-color: #dc3545;
 }
 
 body {
@@ -101,4 +90,7 @@ a:hover {
   left: 60%;
   transform: translateX(-50%);
   font-size: 0.9rem;
+}
+.main-content {
+  padding-top: 6vw;
 }
